--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,19 @@
             "driver": "SQLite",
             "name": "testar",
             "database": "${workspaceFolder:e21-22-php-curso}/exercicios/sql/mod5/mod5.sqlite"
+        },
+        {
+            "mysqlOptions": {
+                "authProtocol": "default"
+            },
+            "previewLimit": 50,
+            "server": "3.89.36.150",
+            "port": 3306,
+            "driver": "MySQL",
+            "name": "grupo2",
+            "database": "phpe2122g2",
+            "username": "phpe2122g2",
+            "password": "phpe2122g2@22@ago"
         }
     ],
     "sqltools.useNodeRuntime": true
